# test_csharp

./: .gitignore  CMakeLists.txt
hello-opencv/: CMakeLists.txt  hello-opencv.cs
hello-world/: CMakeLists.txt
scripts/: build.sh
